manifests/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: media
  labels:
    app: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
    - name: http
      port: 80
      targetPort: 8083
  type: ClusterIP
